# google-books

./: .gitignore  README.md  gbooks.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  linting.yml  unit-tests.yaml
docs/media/: sierra-full-catalog-saved-search.json
files/: 24-01-monthly-report.txt  true-unique-google-internal-notes.txt
google_books/: __init__.py  errors.py  google-hathi-diff.ipynb  hathi_processor.py  hathi_report.py  hathi_submission_errors.ipynb  manifest.py  marc_manipulator.py  marc_validator.py  picklist-draft.ipynb  picklist.py  recap_manifest.py  utils.py
src/: hathi_report.py
tests/: _grin_query_sample.txt  conftest.py  google-reconciliation-FO-report-sample.txt  hathi-report-sample.txt  marcxml-sample-no-barcode.xml  marcxml-sample-one-bib.xml  marcxml-sample.xml  sample-rlin-bibs.mrc  test_cli.py  test_hathi_processor.py  test_hathi_report.py  test_marc_manipulator.py  test_picklist.py  test_utils.py
