[tool.poetry]
name = "google-books"
version = "0.1.0"
description = "Scripts supporting Google Books / Hathi Trust metadata ingests from NYPL"
authors = ["Tomek Kalata <klingaroo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["google-books"]

[tool.poetry.dependencies]
python = "^3.12"
pymarc = "^5.1.0"
click = "^8.1.7"
pandas = "^2.1.4"
pydantic = "^2.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
black = "^24.2.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
google-books = "google_books:main"

[tool.coverage.run]
relative_files = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
